# kml_adapter

./: README.en.md  README.md  glibc_kzl.sh
Julia_adapter/: CMakeLists.txt  build.sh
Julia_adapter/src/: blas_ilp64_trick.c
R_adapter/: CMakeList.txt  CMakeLists.txt  config.cmake.in  functions.R
R_adapter/src/: CMakeList.txt  CMakeLists.txt  rfunctions.c
eigen_adapter/: eigen_kml.patch
ipl_adapter/: config.h  kml_inline.h  kml_interp.h  kml_interp2d.h  kml_spline.h  kml_spline2d.h  kml_types.h
kml_fft_adapter/: CMakeLists.txt  build.sh
kml_fft_adapter/include/: fft_type.h  kfft.h
kml_fft_adapter/src/: c2c.c  c2r.c  execute.c  f77.c  fortran_wrapper.c  malloc.c  r2c.c  r2r.c  stub.c  threads.c
kml_fft_adapter/test/: test.sh
kzl_adapter/: build.sh  lz4_kzl.patch
lapack-adapt/: AdaptLapack.patch  README.md  build-full-klapack.sh  build-full-kscalapack.sh  build.sh
math_benchtest/: testkm.sh  testlibm.sh
numpy_adapter/: PKG-INFO
numpy_adapter/numpy/core/: setup.py
numpy_adapter/numpy/core/code_generators/: generate_umath.py
numpy_adapter/numpy/core/include/numpy/: npy_common.h
numpy_adapter/numpy/core/src/common/: cblasfuncs.c  python_xerbla.c
numpy_adapter/numpy/core/src/multiarray/: arraytypes.c.src  common.h  multiarraymodule.c  vdot.c
numpy_adapter/numpy/core/src/umath/: kvml_adapter.h  loops.h.src  loops_arithm_fp.dispatch.c.src  loops_exponent_log.dispatch.c.src  loops_trigonometric.dispatch.c.src  loops_umath_fp.dispatch.c.src  loops_unary_fp.dispatch.c.src  matmul.c.src  ufunc_object.c
numpy_adapter/numpy/distutils/checks/: cpu_asimdfhm.c
numpy_adapter/numpy/fft/: _pocketfft.c  _pocketfft.py  _pocketfftf.c  setup.py
numpy_adapter/numpy/linalg/: kml_lapack_names.h  kml_math.h  lapack_litemodule.c  setup.py  umath_linalg.c.src
numpy_adapter/numpy/linalg/lapack_lite/: f2c.h  f2c_c_lapack.c  f2c_d_lapack.c  f2c_s_lapack.c  f2c_z_lapack.c  lapack_lite_names.h  python_xerbla.c
